--- a/request.html
+++ b/request.html
@@ -25,7 +25,7 @@
         <div class="contact">
             <h1>Talepler</h1>
             <p>Bizimle iletişime geçmek için aşağıdaki formu kullanabilirsiniz.</p>
-            <form action="/submit-contact" method="post">
+            <form action="https://formspree.io/f/xpwaeyee" method="post">
                 <label for="name">Adınız:</label>
                 <input type="text" id="name" name="name" required>
                 
